--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,47 +1,50 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
-    defaultConfig {
-        applicationId "com.wj.menu"
-        minSdkVersion 15
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  compileSdkVersion 26
+  defaultConfig {
+    applicationId "com.wj.menu"
+    minSdkVersion 15
+    targetSdkVersion 26
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+  }
+  //添加 因 butterknife报错
+  defaultConfig {
+    javaCompileOptions {
+      annotationProcessorOptions {
+        includeCompileClasspath = true
+      }
     }
-    //添加 因 butterknife报错
-    defaultConfig{
-        javaCompileOptions {
-            annotationProcessorOptions {
-                includeCompileClasspath = true
-            }
-        }
-    }
+  }
 }
 //AndroidResideMenu添加
 repositories {
-    mavenCentral()
+  mavenCentral()
 }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:0.5'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    //注解 ID
-    implementation 'com.jakewharton:butterknife:5.1.1'
-    //添加 因annotations报错
-    androidTestCompile('com.android.support:support-annotations:25.4.0') {
-        force = true
-    }
+  implementation fileTree(dir: 'libs', include: ['*.jar'])
+  implementation 'com.android.support:appcompat-v7:26.1.0'
+  implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'com.android.support.test:runner:0.5'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  //注解 ID
+  implementation 'com.jakewharton:butterknife:5.1.1'
+  //添加 因annotations报错
+  androidTestCompile('com.android.support:support-annotations:25.4.0') {
+    force = true
+  }
 
-    compile 'com.specyci:residemenu:1.6+'
+  //android reside menu
+  compile 'com.specyci:residemenu:1.6+'
+  //ldrawer
+  compile 'com.ikimuhendis:ldrawer:0.1'
 }
