--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,9 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        
+        //添加walle打包依赖
+        classpath 'com.meituan.android.walle:plugin:1.1.6'
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
